add binding thumbnail and resources

--- a/frontendmasters/binding/index.html
+++ b/frontendmasters/binding/index.html
@@ -123,6 +123,10 @@
       <a href="#transition">transition</a>
     </li>
     <li>
+      <a href="#events">events</a>
+    </li>
+
+    <li>
       <a href="#resources">Resources</a>
     </li>
 
@@ -435,6 +439,10 @@
     <p>
       <ul>
         <li><a target=_blank href="http://www.w3.org/TR/CSS2/selector.html">CSS selectors</a>
+        <li><a target=_blank href="http://mbostock.github.io/d3/tutorial/circle.html">Three little circles tutorial</a>
+        <li><a target=_blank href="http://bost.ocks.org/mike/selection/">How selections work</a>
+        <li><a target=_blank href="http://bost.ocks.org/mike/constancy/">Object constancy</a>
+        <li><a target=_blank href="http://bost.ocks.org/mike/transition/">Working with transitions</a>
       </ul>
     </p>
   </div>
