--- a/frontendmasters/svg/index.html
+++ b/frontendmasters/svg/index.html
@@ -11,6 +11,7 @@
   <script src="../lib/d3.min.js"></script>
   <script src="../lib/sticker.js"></script>
   <script src="../lib/inlet.min.js"></script>
+  <title>SVG Overview</title>
 <style>
   li {
     font-family: Ubuntu;
