--- a/frontendmasters/reusable/index.html
+++ b/frontendmasters/reusable/index.html
@@ -5,121 +5,13 @@
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700|Ubuntu' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="../lib/codemirror.css">
   <link rel="stylesheet" href="../lib/inlet.css">
+  <link rel="stylesheet" href="../style.css">
   <script src="../lib/codemirror.js"></script>
   <script src="../lib/javascript.js"></script>
   <script src="../lib/d3.min.js"></script>
   <script src="../lib/sticker.js"></script>
   <script src="../lib/inlet.min.js"></script>
   <title>Reusable Charts</title>
-</head>
-<style>
-  body {
-    font-family: Lato;
-  }
-  li {
-    font-family: Ubuntu;
-    font-size: 16px;
-    list-style: none;
-    display: inline;
-    list-style-type: none;
-  }
-  .content {
-    position:absolute;
-    top: 70px;
-  }
-  .header {
-    display: inline-block;
-    position: fixed;
-    top:0;
-    margin-top:0;
-    padding-bottom: 5px;
-    height: 70px;
-    width: 100%;
-    z-index:1000;
-    background-color: white;
-  }
-  .header a{
-    float:left;
-    margin: 2px;
-    margin-left: 10px;
-  }
-  .header ul {
-    margin-top: 30px;
-    width: 100%;
-  }
-  h1 {
-    font-family: Ubuntu;
-    font-size: 72px;
-    padding: 0;
-    margin:0;
-    float:left;
-  }
-  h2 {
-    font-family: Ubuntu;
-    font-size: 24px;
-    width: 100%;
-    padding: 5px;
-    background-color: #dfefef;
-  }
-
-  h3 {
-    font-family: Ubuntu;
-  }
-  p {
-    font-family: Lato;
-    font-size: 14px;
-  }
-  .editor {
-  }
-  .editor .CodeMirror {
-    width: 100%;
-    height: 100%;
-    padding: 15px;
-    overflow-x: scroll;
-  }
-  aside {
-    font-size: small;
-    position: relative;
-    margin: 10px;
-    padding: 5px;
-    background-color: #fffeee;
-    width: 180px;
-    font-family: Lato;
-  }
-
-  .cm-s-default .cm-number { color: #25B0B0; }
-
-  .sidebyside {
-    display: block;
-  }
-  .sidebyside .left {
-  }
-  .sidebyside .right {
-  }
-
-  .sidebyside svg {
-    border: 1px solid #cfcfcf;
-  }
-  @media only screen and (min-width: 1155px) {
-      .sidebyside {
-          width: 950px;
-          margin-bottom: 56px;
-      }
-      .sidebyside .left, .sidebyside .right {
-          vertical-align: top;
-          margin: 0;
-          display: inline-block;
-          width: 440px;
-      }
-      .sidebyside .left {
-          margin-right: 50px;
-      }
-      aside {
-        position: absolute;
-        right: 10px;
-      }
-  }
-</style>
 </head>
 <body>
   <div class="header">
