--- a/frontendmasters/index.html
+++ b/frontendmasters/index.html
@@ -14,14 +14,14 @@
   li {
     list-style: none;
     font-family: Ubuntu;
-    font-size: 24px;
+    font-size: 26px;
     clear:left;
     float:left;
     margin: 20px;
   }
   li p {
     font-family: Lato;
-    font-size: 12px;
+    font-size: 14px;
     width: 200px;
     float: left;
     margin-left: 20px;
@@ -39,7 +39,7 @@
     bottom: 10px;
     right: 15px;
     background-color: rgba(255,255,255,0.7);
-    font-size: 10px;
+    font-size: 12px;
     text-align: right;
   }
 </style>
@@ -52,6 +52,11 @@
     Thanks to <a href="https://twitter.com/1marc">Marc Grabanski</a> for considering me a <a href="http://frontendmasters.com">Frontend Master</a>.
   </div>
   <ul>
+    <li>
+      <img src="pregame/thumb.png">
+      <a href="pregame">Pre-Game</a>
+      <p>Some things to go over before we dive in</p>
+    </li>
     <li>
       <a href="svg">SVG Overview</a>
       <img src="svg/thumb.png">
@@ -68,15 +73,21 @@
       <p>overview of the rest of the d3 API functions which can be used in all kinds of situations</p>
     </li>
     <li>
+      <img src="reusable/thumb.png">
+      <a href="reusable">Reusable Charts</a>
+      <p>introduction to the reusable chart pattern</p>
+    </li>
+    <li>
       <img src="application/thumb.png">
       <a href="application">Application Patterns</a>
       <p>exploration of data, event and rendering patterns</p>
     </li>
     <li>
-      <img src="reusable/thumb.png">
-      <a href="reusable">Reusable Charts</a>
-      <p>introduction to the reusable chart pattern</p>
+      <img src="diving/thumb.png">
+      <a href="diving">Diving Board</a>
+      <p>Links and resources for diving even deeper into d3</p>
     </li>
+
   </ul>
   
 </body>
