--- a/frontendmasters/nonbinding/index.html
+++ b/frontendmasters/nonbinding/index.html
@@ -180,8 +180,10 @@ var axis = d3.svg.axis()
 var g = svg.append("g")
 axis(g)
 g.attr("transform", "translate(50, 50)")
-g.selectAll("path").style({ fill: "none", stroke: "#000"})
-g.selectAll("line").style({ stroke: "#000"})
+g.selectAll("path")
+  .style({ fill: "none", stroke: "#000"})
+g.selectAll("line")
+  .style({ stroke: "#000"})
 </snippet>
         <div class="editor"></div>
         <p>
@@ -295,9 +297,12 @@ var g = svg.append("g")
 brush(g)
 g.attr("transform", "translate(50, 100)")
 g.selectAll("rect").attr("height", 30)
-g.selectAll(".background").style({fill: "#4B9E9E", visibility: "visible"})
-g.selectAll(".extent").style({fill: "#78C5C5", visibility: "visible"})
-g.selectAll(".resize rect").style({fill: "#276C86", visibility: "visible"})
+g.selectAll(".background")
+  .style({fill: "#4B9E9E", visibility: "visible"})
+g.selectAll(".extent")
+  .style({fill: "#78C5C5", visibility: "visible"})
+g.selectAll(".resize rect")
+  .style({fill: "#276C86", visibility: "visible"})
 
 </snippet>
         <p>
@@ -355,10 +360,14 @@ svg.selectAll("rect")
 .data(layout)
 .enter().append("rect")
 .attr({
-  x: function(d,i) { return 150 + i * 30 },
+  x: function(d,i) {
+    return 150 + i * 30
+  },
   y: 50,
   width: 20,
-  height: function(d,i) { return 20 * d.length }
+  height: function(d,i) {
+    return 20 * d.length
+  }
 })
 
 </snippet>
@@ -471,16 +480,25 @@ d3.text(url, function(err, data) {...})
     <p>
       <ul>
         <li><a target=_blank href="http://edenhalperin.com/d3-scale-generator/">d3 scale generator</a>
-        <li><a target=_blank href=""></a>
-        <li><a target=_blank href=""></a>
-        <li><a target=_blank href=""></a>
-        <li><a target=_blank href=""></a>
-        <li><a target=_blank href=""></a>
+        <li><a target=_blank href="https://github.com/mbostock/d3/wiki/API-Reference">d3 API docs</a>
+        <li><a target=_blank href="https://github.com/mbostock/d3/wiki/SVG-Axes#wiki-axis">Axis API docs</a>
+        <li><a target=_blank href="https://github.com/mbostock/d3/wiki/Histogram-Layout#wiki-histogram">Histogram API docs</a>
+        <li><a target=_blank href="https://github.com/mbostock/d3/wiki/SVG-Controls#wiki-brush">Brush API docs</a>
+        <li><a target=_blank href="https://github.com/mbostock/d3/wiki/Time-Scales#wiki-scale">Time API docs</a>
       </ul>
     </p>
   </div>
 
   <a href="#">Top</a>
 </div>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-39326674-5', 'enjalot.github.io');
+  ga('send', 'pageview');
+</script>
+
 </body>
 </html>
