--- a/frontendmasters/pregame/index.html
+++ b/frontendmasters/pregame/index.html
@@ -122,7 +122,7 @@
     <div class="project sidebyside">
       <ul>
         <li><a target=_blank href="/frontendmasters/code/base.html">base html file</a>
-        <li><a target=_blank href="http://github.com/enjalot/intro-d3/frontendmasters/code/">all code samples for this project</a>
+        <li><a target=_blank href="https://github.com/enjalot/intro-d3/tree/master/frontendmasters/code">all code samples for this project</a>
       </ul>
       <a target=_blank href="/frontendmasters/code/all-together.html">
         <img src="../application/alltogether.png" width=90%>
@@ -135,5 +135,13 @@
   <br>
   <br>
 </div>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-39326674-5', 'enjalot.github.io');
+  ga('send', 'pageview');
+</script>
 </body>
 </html>
