--- a/frontendmasters/application/index.html
+++ b/frontendmasters/application/index.html
@@ -48,7 +48,7 @@
   <div name="alltogether" id="alltogether">
     <h2>putting it all together</h2>
     <div class="alltogether sidebyside">
-      <a target=_blank href="/frontendmasters/code/all-together.html">
+      <a target=_blank href="../code/all-together.html">
         <img src="alltogether.png" width=90%>
       </a>
     </div>
