--- a/frontendmasters/pregame/index.html
+++ b/frontendmasters/pregame/index.html
@@ -121,10 +121,10 @@
     <h2>project</h2>
     <div class="project sidebyside">
       <ul>
-        <li><a target=_blank href="/frontendmasters/code/base.html">base html file</a>
+        <li><a target=_blank href="../code/base.html">base html file</a>
         <li><a target=_blank href="https://github.com/enjalot/intro-d3/tree/master/frontendmasters/code">all code samples for this project</a>
       </ul>
-      <a target=_blank href="/frontendmasters/code/all-together.html">
+      <a target=_blank href="../code/all-together.html">
         <img src="../application/alltogether.png" width=90%>
       </a>
     </div>
