--- a/frontendmasters/reusable/index.html
+++ b/frontendmasters/reusable/index.html
@@ -39,10 +39,10 @@
     <h2>scatter</h2>
     <div class="scatter sidebyside">
       <div class="left">
-        <h3><a href="/frontendmasters/code/scatter.html">One-and-Done</a></h3>
+        <h3><a href="../code/scatter.html">One-and-Done</a></h3>
         <h3>
-          <a href="/frontendmasters/code/scatter-reusable.html">Reusable</a>
-          <a href="/frontendmasters/code/scatter.js">(js)</a>
+          <a href="../code/scatter-reusable.html">Reusable</a>
+          <a href="../code/scatter.js">(js)</a>
         </h3>
       </div>
       <div class="right">
@@ -55,10 +55,10 @@
     <h2>bar chart (histogram)</h2>
     <div class="data sidebyside">
       <div class="left">
-        <h3><a href="/frontendmasters/code/histogram.html">One-and-Done</a></h3>
+        <h3><a href="../code/histogram.html">One-and-Done</a></h3>
         <h3>
-          <a href="/frontendmasters/code/histogram-reusable.html">Reusable</a>
-          <a href="/frontendmasters/code/histogram.js">(js)</a>
+          <a href="../code/histogram-reusable.html">Reusable</a>
+          <a href="../code/histogram.js">(js)</a>
         </h3>
       </div>
       <div class="right">
@@ -71,10 +71,10 @@
     <h2>table</h2>
     <div class="table sidebyside">
       <div class="left">
-        <h3><a href="/frontendmasters/code/table.html">One-and-Done</a></h3>
+        <h3><a href="../code/table.html">One-and-Done</a></h3>
         <h3>
-          <a href="/frontendmasters/code/table-reusable.html">Reusable</a>
-          <a href="/frontendmasters/code/table.js">(js)</a>
+          <a href="../code/table-reusable.html">Reusable</a>
+          <a href="../code/table.js">(js)</a>
         </h3>
       </div>
       <div class="right">
