--- a/frontendmasters/code/base.html
+++ b/frontendmasters/code/base.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <svg></svg>
+    <script src="lib/jquery-1.7.1.min.js"></script>
     <script src="lib/jquery.tipsy.js"></script>
     <script src="lib/d3.js"></script>
     <script>
