add a link to the block we built in class

--- a/frontendmasters/application/index.html
+++ b/frontendmasters/application/index.html
@@ -51,6 +51,9 @@
       <a target=_blank href="../code/all-together.html">
         <img src="alltogether.png" width=90%>
       </a>
+      <p>
+      <h2><a href="http://bl.ocks.org/enjalot/6641917">The final result built in class</a></h2>
+      </p>
     </div>
   </div>
 
