--- a/html5devconf/index.html
+++ b/html5devconf/index.html
@@ -97,7 +97,7 @@
     <div class=thanks>
       <br><br>
       Thanks to <a href="https://twitter.com/mrejfox">EJ Fox</a> and <a href="https://twitter.com/enoex">Erik Hazzard</a> for reviewing these materials with me.<br>
-      Shoutout to <a href="https://twitter.com/syntagmatic">Kai Chang</a>, <a href="https://twitter.com/poezn">Michael Porath</a> and <a href="http://alignedleft.com/tutorials/d3">Scott Murray</a> for teaching me a ton about d3 as well as how to teaching it.<br>
+      Shoutout to <a href="https://twitter.com/syntagmatic">Kai Chang</a>, <a href="https://twitter.com/poezn">Michael Porath</a> and <a href="http://alignedleft.com/tutorials/d3">Scott Murray</a> for teaching me a ton about d3 as well as how to teach it.<br>
       Thanks to <a href="http://www.redblobgames.com">Amit Patel</a> for sharing his tutorial creation process with me.<br>
       Thanks to <a href="https://twitter.com/1marc">Marc Grabanski</a> for considering me a <a href="http://frontendmasters.com">Frontend Master</a>.
       <br><br>
