--- a/html5devconf/pregame/index.html
+++ b/html5devconf/pregame/index.html
@@ -123,6 +123,7 @@
       <ul>
         <li><a target=_blank href="http://tributary.io/inlet/7150451">survey results</a></li>
         <li><a target=_blank href="../base.html">base html file</a></li>
+        <li><a target=_blank href="http://d3js.org/d3.v3.js">d3.js</a></li>
         <li><a target=_blank href="http://bl.ocks.org/enjalot/7149418">final project</a></li>
       </ul>
       <a target=_blank href="http://bl.ocks.org/enjalot/7149418">
