add link to html5devconf workshop

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
   <p>
     <a style="font-size:24px" href="frontendmasters">Interactive Data Visualizations with d3.js Workshop</a><br> given at <a href="http://frontendmasters.com/workshops/interactive-data-visualization-d3js/">Frontend Masters</a>
   </p>
+  <p>
+    <a style="font-size:24px" href="html5devconf">Intermediate d3.js Workshop</a><br> given at <a href="http://html5devconf.com">HTML5 Dev Conf 10/2013</a>
+  </p>
+
 
 </body>
 </html>
