--- a/html5devconf/svg/index.html
+++ b/html5devconf/svg/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="../lib/codemirror.css">
   <link rel="stylesheet" href="../lib/inlet.css">
   <link rel="stylesheet" href="../style.css">
+  <script src="../lib/html5slider.js"></script>
   <script src="../lib/codemirror.js"></script>
   <script src="../lib/xml.js"></script>
   <script src="../lib/htmlembedded.js"></script>
@@ -78,6 +79,7 @@
       var text = "<circle\n  cx=250\n  cy=100\n  r=30\n  fill='#25B0B0'>\n</circle>";
       cm.on("change", function() {
         var value = cm.getValue();
+        console.log("VALUE", value)
         sticker.string(value);
         sticker.deserialize();
         svg.selectAll("*").remove()
