--- a/frontendmasters/binding/index.html
+++ b/frontendmasters/binding/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="../lib/codemirror.css">
   <link rel="stylesheet" href="../lib/inlet.css">
   <link rel="stylesheet" href="../style.css">
+  <script src="../lib/html5slider.js"></script>
   <script src="../lib/codemirror.js"></script>
   <script src="../lib/javascript.js"></script>
   <script src="../lib/d3.min.js"></script>
