--- a/frontendmasters/svg/index.html
+++ b/frontendmasters/svg/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="../lib/codemirror.css">
   <link rel="stylesheet" href="../lib/inlet.css">
   <link rel="stylesheet" href="../style.css">
+  <script src="../lib/html5slider.js"></script>
   <script src="../lib/codemirror.js"></script>
   <script src="../lib/xml.js"></script>
   <script src="../lib/htmlembedded.js"></script>
