mozilla setup and data slides

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
   <p>
     <a style="font-size:24px" href="html5devconf">Intermediate d3.js Workshop</a><br> given at <a href="http://html5devconf.com">HTML5 Dev Conf 10/2013</a>
   </p>
-
+  <p>
+    <a style="font-size:24px" href="mozilla">Introductory d3.js Workshop</a><br> given at <a href="http://mozilla.org">Mozilla 6/2014</a>
+  </p>
 
 </body>
 </html>
