--- a/mozilla/index.html
+++ b/mozilla/index.html
@@ -4,6 +4,80 @@
 <head>
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700|Ubuntu' rel='stylesheet' type='text/css'>
 </head>
+<style>
+  body {
+    font-family: Lato;
+  }
+  .content {
+    max-width: 600px;
+    margin: 0 auto;
+  }
+  ul {
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+  li {
+    list-style: none;
+    font-family: Ubuntu;
+    font-size: 26px;
+    clear:left;
+    float:left;
+    margin: 20px;
+  }
+  li p {
+    font-family: Lato;
+    font-size: 14px;
+    width: 200px;
+    margin-left: 20px;
+  }
+  li a {
+    margin-left: 20px;
+  }
+  img {
+    width: 100px;
+    height: 100px;
+    float:left;
+  }
+  .thanks {
+    background-color: rgba(255,255,255,0.7);
+    font-size: 12px;
+    text-align: center;
+    float:left;
+    clear: left;
+  }
+</style>
+</head>
 <body>
+  <div class="content">
+    <ul>
+      <li>
+        <span>
+          <a href="setup">
+          <img src="setup/thumb.png">
+          </a>
+          <a href="setup">Setup</a>
+        </span>
+        <p>Some things to go over before we dive in</p>
+      </li>
+      <li>
+        <a href="data">
+        <img src="data/thumb.png">
+        </a>
+        <a href="data">The Data</a>
+        <p>Some data to play with</p>
+      </li>
+    </ul>
+      <br><br>
+      <br><br>
+    </div>
+
+  </div>
+ <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-39326674-5', 'enjalot.github.io');
+  ga('send', 'pageview');
+</script> 
 </body>
 </html>
