fix reddit link

--- a/mozilla/data/index.html
+++ b/mozilla/data/index.html
@@ -185,7 +185,7 @@ d3.csv(url, function(err, data){
     <div class="sidebyside">
       <div class="left">
 <snippet>
-var url = "http://reddit.com/r/pics.json";
+var url = "http://www.reddit.com/r/pics.json";
 d3.json(url, function(err, data){
   console.log(url, "error", err);
   console.log(url, "data", data)
@@ -194,9 +194,9 @@ d3.json(url, function(err, data){
         <div class="editor"></div>
         <p>
           Reddit has one of the coolest APIs.
-          <p><a href="http://reddit.com/r/pics">http://reddit.com/r/pics</a></p>
+          <p><a href="http://www.reddit.com/r/pics">http://www.reddit.com/r/pics</a></p>
           vs.
-          <p><a href="http://reddit.com/r/pics.json">http://reddit.com/r/pics.json</a></p>
+          <p><a href="http://www.reddit.com/r/pics.json">http://www.reddit.com/r/pics.json</a></p>
         </p>
       </div>
     </div>
