--- a/mozilla/index.html
+++ b/mozilla/index.html
@@ -52,7 +52,6 @@
       <li>
         <span>
           <a href="setup">
-          <img src="setup/thumb.png">
           </a>
           <a href="setup">Setup</a>
         </span>
@@ -60,11 +59,17 @@
       </li>
       <li>
         <a href="data">
-        <img src="data/thumb.png">
         </a>
         <a href="data">The Data</a>
         <p>Some data to play with</p>
       </li>
+      <li>
+
+        <a href="/frontendmasters">
+        </a>
+        <a href="/frontendmasters">Intro Slides</a>
+        <p>Some slides to follow along</p>
+      </li>      
     </ul>
       <br><br>
       <br><br>
