--- a/mozilla/setup/index.html
+++ b/mozilla/setup/index.html
@@ -72,12 +72,11 @@
         </p>
         <p>
           You can use things like d3.json on urls that have CORS support:<br>
-
+          <a href="http://tributary.io/inlet/6f29a93e077f284b736d">http://tributary.io/inlet/6f29a93e077f284b736d</a>
         </p>
         <p>
           You can also copy-paste data into a "file" in tributary:<br>
-
-
+          <a href="http://tributary.io/inlet/9960b7384b42d22edd3f">http://tributary.io/inlet/9960b7384b42d22edd3f</a>
         </p>
       </div>
       <div class="right">
