--- a/maptime/index.html
+++ b/maptime/index.html
@@ -34,8 +34,6 @@
   }
   img {
     width: 100px;
-    height: 100px;
-    float:left;
   }
   .thanks {
     background-color: rgba(255,255,255,0.7);
@@ -51,24 +49,26 @@
     <ul>
       <li>
         <span>
-          <a href="setup">
-          </a>
-          <a href="setup">Setup</a>
+          <a href="examples"><img src="images/examples.png"></a>
+          <a href="examples">Examples</a>
         </span>
-        <p>Some things to go over before we dive in</p>
+        <p>Let's peruse some examples of using d3 to make maps</p>
       </li>
       <li>
-        <a href="data">
-        </a>
+        <a href="data"><img src="images/data.png"></a>
         <a href="data">The Data</a>
         <p>Some data to play with</p>
       </li>
       <li>
-
-        <a href="../frontendmasters">
+        <a href="geo"><img src="images/d3geo.png"></a>
+        <a href="geo">d3.geo</a>
+        <p>Survey of d3.geo API functions</p>
+      </li>
+      <li>
+        <a href="../html5devconf">
         </a>
-        <a href="../frontendmasters">Intro Slides</a>
-        <p>Some slides to follow along</p>
+        <a href="../html5devconf">Intro to d3.js Slides</a>
+        <p>Resource for learning more about d3.js</p>
       </li>      
     </ul>
       <br><br>
